[metadata]
name = services-haspanext
version = 1.0.0
author = Sven Casimir
author_email = sven.casimir@haspa-next.de
description = A package used by services to do common setup tasks like initializing service configuration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haspanext/python-haspanext/services
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
